# lightboot

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: listener.rs  main.rs
